--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Faster5</string>
+    <string name="facebook_app_id">513017002219486</string>
 </resources>
