--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Faster5</string>
     <string name="facebook_app_id">513017002219486</string>
+    <string name="username1">Nguyen Van A</string>
 </resources>
