--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="help2_wait_popup">Hỏi ý kiến khán giả</string>
     <string name="help3_wait_popup">Đáp án từ chương trình</string>
     <string name="quit">Đối phương đã bỏ cuộc</string>
+    <string name="disconnect_server">MẤT KẾT NỐI SERVER</string>
 </resources>
