add check ggplay-service

--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="answ_B">B:</string>
     <string name="answ_C">C:</string>
     <string name="answ_D">D:</string>
-    <string name="set_Avatar">ĐẶT Avatar</string>
+    <string name="set_Avatar">Đặt Avatar</string>
     <string name="question_Avatar">Bạn muốn chọn ảnh đại diện\ncho mình luôn chứ?</string>
     <string name="avatar_from_camera">Từ Camera</string>
     <string name="avatar_from_gallery">Từ Thư viện</string>
