Done version 0.3 - Hiện notification ở status bar dùng Firebase - Hiện thông báo "tặng tiền cho người dùng cho lần đăng nhập đầu tiên" - Chỉ yêu cầu update google-play-service khi upload avatar - Nếu người chơi thắng thì khi ấn vào button Tiếp Tục sẽ hiển thị rateDialog

--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -69,4 +69,11 @@
     <string name="btn_report">Gửi cho chương trình</string>
     <string name="noti_report">Cảm ơn bạn đã gửi phản hồi!</string>
     <string name="noti_report_2">Bạn đã phản hồi ở lượt chơi này rồi!</string>
+    <string name="text_reward">Bạn nhận được phần thưởng 6000 điểm!</string>
+
+    <string name="my_own_title">ĐÁNH GIÁ</string>
+    <string name="my_own_message">Nếu bạn thích ứng dụng này xin vui lòng dành chút thời gian để đánh giá.\nCảm ơn bạn rất nhiều!</string>
+    <string name="my_own_rate">ĐÁNH GIÁ</string>
+    <string name="my_own_thanks">KHÔNG, CẢM ƠN!</string>
+    <string name="my_own_cancel">ĐỂ SAU</string>
 </resources>
