--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="timeout">TIME\nOUT</string>
     <string name="question">Question?</string>
     <string name="no_question">1</string>
-    <string name="btn_timkiem">Tìm kiếm</string>
+    <string name="btn_back">Quay lại</string>
     <string name="btn_play">CHƠI</string>
     <string name="title_baotri">THÔNG BÁO</string>
     <string name="text_baotri">Hệ thống đang bảo trì\nVui lòng quay lại sau!</string>
@@ -53,8 +53,9 @@
     <string name="connect_erro_text">Lỗi mạng.\nVui lòng kiểm tra lại&#8230;</string>
     <string name="title_disconnect_popup">MẤT KẾT NỐI</string>
     <string name="hint_edittex_login">Choose username</string>
-    <string name="title_wait_popup">Chưa sẵn sàng</string>
-    <string name="text_wait_popup">Vui lòng đợi đối thủ</string>
+    <string name="title_wait_popup">HƯỚNG DẪN</string>
+    <string name="text_wait_popup">Đợi đối thủ sẵn sàng</string>
+    <string name="ready">Đối thủ đã sẵn sàng</string>
     <string name="btn_cancel_wait_popup">THOÁT</string>
     <string name="second_wait_popup">30</string>
     <string name="help4_wait_popup">30 giây mỗi câu hỏi</string>
@@ -63,13 +64,13 @@
     <string name="help3_wait_popup">Đáp án từ chương trình</string>
     <string name="quit">Đối phương đã bỏ cuộc</string>
     <string name="disconnect_server">MẤT KẾT NỐI SERVER</string>
-    <string name="ready">Đã sẵn sàng</string>
     <string name="title_report">PHẢN HỒI</string>
     <string name="text_report">Có câu hỏi không chính xác\ntrong lượt chơi vừa rồi&#63;</string>
     <string name="btn_report">Gửi cho chương trình</string>
     <string name="noti_report">Cảm ơn bạn đã gửi phản hồi!</string>
     <string name="noti_report_2">Bạn đã phản hồi ở lượt chơi này rồi!</string>
     <string name="text_reward">Bạn nhận được phần thưởng 6000 điểm!</string>
+    <string name="exit_text">Bạn thực sự muốn thoát?</string>
 
     <string name="my_own_title">ĐÁNH GIÁ</string>
     <string name="my_own_rate">ĐÁNH GIÁ</string>
