--- a/Faster5/app/src/main/res/values/strings.xml
+++ b/Faster5/app/src/main/res/values/strings.xml
@@ -65,14 +65,15 @@
     <string name="quit">Đối phương đã bỏ cuộc</string>
     <string name="disconnect_server">MẤT KẾT NỐI SERVER</string>
     <string name="title_report">PHẢN HỒI</string>
-    <string name="text_report">Có câu hỏi không chính xác\ntrong lượt chơi vừa rồi&#63;</string>
+    <string name="text_report">Có câu hỏi không chính\nxác trong lượt chơi&#63;</string>
     <string name="btn_report">Gửi cho chương trình</string>
     <string name="noti_report">Cảm ơn bạn đã gửi phản hồi!</string>
     <string name="noti_report_2">Bạn đã phản hồi ở lượt chơi này rồi!</string>
     <string name="text_reward">Bạn nhận được phần thưởng 6000 điểm!</string>
     <string name="exit_text">Bạn thực sự muốn thoát?</string>
+    <string name="wait_text_quit">"Vui lòng đợi!"</string>
 
-    <string name="my_own_title">ĐÁNH GIÁ</string>
+    <string name="text_rate">Đánh giá</string>
     <string name="my_own_rate">ĐÁNH GIÁ</string>
     <string name="my_own_thanks">KHÔNG, CẢM ƠN!</string>
     <string name="my_own_cancel">ĐỂ SAU</string>
